<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PageStyle"
    tools:context="com.lydiaralph.decisiontracker.ConfigureNewDecisionActivity">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/PageTitle"
        android:text="@string/configure_decision" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/prompt_decision_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/ask_this_question" />

    <EditText
        android:id="@+id/input_decision_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ask_this_question_hint"
        android:inputType="text"
        />

    <Button
        style="@style/GenericButton"
        android:id="@+id/button_submit_new_decision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        style="@style/GenericButton"
        android:id="@+id/button_return_to_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_to_main_menu" />

</LinearLayout>
