<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="@style/PageTitle"
        android:text="@string/vote_on_decision" />

    <TextView
        android:id="@+id/display_decision_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="@style/SubtitleTextStyle"
        android:text="@string/decision_question_hint" />

    <TextView
        android:id="@+id/display_dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="@style/TextStyle"
        android:text="@string/time_remaining" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="@style/TextStyle"
        android:text="@string/what_is_your_decision_today" />

    <LinearLayout
        android:id="@+id/display_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textAppearance="@style/TextStyle"
        android:text="@string/no_options_placeholder"
        android:orientation="horizontal" />

    <!-- Add radio button for each option programmatically -->
    <Button
        style="@style/GenericButton"
        android:id="@+id/button_save"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>