<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PageStyle"
    tools:context=".activities.ViewDecisionDetailActivity">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/PageTitle"
        android:text="@string/your_decision" />

    <TextView
        android:id="@+id/display_decision_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextStyle"
        android:text="@string/decision_question_hint" />

    <TextView
        android:id="@+id/display_dates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextStyle"
        android:text="@string/no_dates_placeholder" />

    <LinearLayout
        android:id="@+id/display_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextStyle"
        android:text="@string/no_options_placeholder"
        android:orientation="horizontal" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <TextView
            android:id="@+id/tvXMax"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/dash"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvYMax"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/dash"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <Button
        style="@style/GenericButton"
        android:id="@+id/button_return_to_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_to_main_menu" />

</LinearLayout>

