<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lydiaralph.decisiontracker.NewDecisionActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/configure_decision"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/explanation_note_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />


    <TextView
        android:id="@+id/explanation_note_1"
        android:text="@string/ask_this_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/user_input_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/user_input_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="@string/ask_this_question_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explanation_note_1" />

    <!--<TextView-->
        <!--android:id="@+id/explanation_note_2"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:text="@string/options_text"-->
        <!--android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/user_input_option_1"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/user_input_question" />-->

    <!--<EditText-->
        <!--android:id="@+id/user_input_option_1"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="39dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:ems="10"-->
        <!--android:hint="@string/option_1_question_hint"-->
        <!--android:importantForAutofill="no"-->
        <!--android:inputType="text"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/user_input_option_2"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/explanation_note_2" />-->

    <!--<EditText-->
        <!--android:id="@+id/user_input_option_2"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:ems="10"-->
        <!--android:hint="@string/option_2_question_hint"-->
        <!--android:importantForAutofill="no"-->
        <!--android:inputType="text"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/user_input_option_3"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/user_input_option_1" />-->

    <!--<EditText-->
        <!--android:id="@+id/user_input_option_3"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:ems="10"-->
        <!--android:hint="@string/option_3_question_hint"-->
        <!--android:importantForAutofill="no"-->
        <!--android:inputType="text"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/button_save"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/user_input_option_2" />-->

    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="6dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/user_input_question"
        app:layout_constraintStart_toStartOf="parent"
        />

</android.support.constraint.ConstraintLayout>
